# zk-nullifier-sig

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  circom.yml  javascript.yml  npm.yml  rust.yml
BN254/rust/: Cargo.toml
BN254/rust/src/: lib.rs
circuits/: flatten-nested-dependencies.sh  package-lock.json  package.json  tsconfig.json  utils.ts  verify_nullifier.circom
circuits/circom/: jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json  utils.ts  verify_nullifier.circom
circuits/circom/test/: a_div_b_pow_c_test.circom  compression.test.ts  compression_test.circom  conversion.test.ts  hashToCurve.test.ts  sha256Circuit.test.ts  subcircuit.test.ts  v1.test.ts  v2.test.ts  v2_test.circom  vfy_nullifier.test.ts  vfy_test.circom
circuits/circom/test/circuits/: 12_point_sha_256_test.circom  a_div_b_pow_c_test.circom  compression_test.circom  compression_verification_test.circom  hash_to_curve_test.circom  v1_test.circom  v2_test.circom
circuits/circom/test/javascript/: .gitignore  pnpm-lock.yaml  tsconfig.json
circuits/circom/test/javascript/src/: index.ts  signals.ts
circuits/circom/test/javascript/src/utils/: curve.ts
circuits/circom/test/javascript/test/: encoding.test.ts  hashToCurve.test.ts  signals.test.ts
circuits/halo2/: .gitignore  Cargo.toml  README.md
circuits/halo2/benches/: plume_verify.rs
circuits/halo2/example-frontend/: README.md  package-lock.json  package.json
circuits/halo2/example-frontend/src/app/: nullifier.ts  page.tsx  utils.ts  worker.ts
circuits/halo2/scripts/: generate_build_files.rs  generate_solidity_verifier.rs
circuits/halo2/src/: lib.rs  main.rs  plume.rs  tests.rs  utils.rs
circuits/halo2/src/hash_to_curve/: mod.rs
circuits/halo2/wasm/: Cargo.toml  README.md
circuits/halo2/wasm-frontend/: build.sh  next.config.mjs  package-lock.json  package.json
circuits/halo2/wasm-frontend/src/app/: layout.tsx  page.tsx  worker.ts
circuits/halo2/wasm-frontend/wasm/: Cargo.toml
circuits/halo2/wasm-frontend/wasm/src/: lib.rs
circuits/halo2/wasm/.cargo/: config
circuits/halo2/wasm/src/: lib.rs  merkle.rs  utils.rs
circuits/noir/: Nargo.toml
circuits/noir/plume/: Nargo.toml
circuits/noir/plume/src/: expand_message_xmd.nr  hash_to_curve.nr  hash_to_field.nr  iso_map.nr  lib.nr  map_to_curve.nr
circuits/noir/src/: lib.nr
circuits/noir/src/curves/: bn254.nr  secp256k1.nr
circuits/noir/src/tests/: bn254.nr  mod.nr  secp256k1.nr
circuits/noir/src/utils/: mod.nr
circuits/noir/use_v1/: Nargo.toml  Prover.toml
circuits/noir/use_v1/src/: main.nr
circuits/noir/use_v2/: Nargo.toml  Prover.toml
circuits/noir/use_v2/src/: main.nr
circuits/test/: 12_point_sha_256_test.circom  a_div_b_pow_c_test.circom  compression_verification_test.circom  hash_to_curve_test.circom  v1_test.circom  vfy_nullifier.test.ts  vfy_test.circom
javascript/: .gitignore  .npmignore  .yarnrc.yml  Cargo.toml  README.MD  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
javascript-miracl/: .gitignore  .pnp.cjs  .yarnrc.yml  package.json  tsconfig.json
javascript-miracl/src/: index.ts
javascript-miracl/src/utils/: encoding.ts  hashToCurve.ts
javascript-wasm/: Cargo.toml
javascript-wasm/src/: lib.rs
javascript/native/: bun.lockb  package.json  tsconfig.json  tsconfig.tsbuildinfo
javascript/native/src/: index.ts  signals.ts
javascript/src/: index.ts  lib.rs  signals.ts
javascript/src/utils/: curve.ts  encoding.ts  hashToCurve.ts
javascript/test/: consts.ts  encoding.test.ts  gen_consts.ts  hashToCurve.test.ts  signals.test.ts  test_consts.json  test_consts.ts
js-wasm/: Cargo.toml  index.html
js-wasm/pkg/: js_wasm.d.ts  js_wasm.js  js_wasm_bg.wasm  js_wasm_bg.wasm.d.ts  package.json
js-wasm/src/: lib.rs
rust-arkworks/: Cargo.toml  README.MD
rust-arkworks/examples/: reference_hash_to_curve.rs
rust-arkworks/src/: error.rs  hash_to_curve.rs  lib.rs  tests.rs  wasm.rs
rust-arkworks/src/fixed_hasher/: expander.rs  mod.rs
rust-arkworks/src/secp256k1/: mod.rs  tests.rs
rust-arkworks/src/secp256k1/curves/: mod.rs
rust-arkworks/src/secp256k1/fields/: fq.rs  fr.rs  mod.rs
rust-arkworks/src/tests/: test_vectors.rs
rust-k256/: Cargo.toml  commitmessage.md  wasm-pack.sh
rust-k256/src/: lib.rs  main.rs  nullifier.rs  randomizedsigner.rs  serialize.rs  tests.rs  utils.rs  wasm.rs
rust-k256/tests/: README.MD  signing.rs  verification.rs
rust-k256/tests/common/: mod.rs
src/: main.rs
typescript/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
typescript/src/: index.ts  signals.ts
typescript/src/curves/: secp256k1.ts
typescript/src/utils/: curve.ts  encoding.ts
