[package]
name = "plume_arkworks"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Implementation of PLUME: nullifier friendly signature scheme on ECDSA; using the `arkworks-rs` libraries"
repository = "https://github.com/plume-sig/zk-nullifier-sig/"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["nullifier", "zero-knowledge", "ECDSA", "PLUME"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "~0.5.0"
ark-ff = "~0.5.0"
ark-std = "~0.5.0"
ark-serialize = "~0.5.0"
ark-serialize-derive = "~0.5.0"
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }
rand = "0.8.4"
tiny-keccak = { version = "2.0.2", features = ["shake"] }
sha2 = "0.10.2"
elliptic-curve = { version = "0.12.2", features = ["arithmetic"] }
generic-array = { version = "0.14", default-features = false }
hex = "0.4.3"

# #standinDependencies
## the curve internalization
ark-ff-macros = "~0.5.0"
## field hasher fix
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
num-bigint = "*"
num-traits = "*"