[package]
name = "plume_arkworks"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "Implementation of PLUME: nullifier friendly signature scheme on ECDSA; using the `arkworks-rs` libraries"
repository = "https://github.com/plume-sig/zk-nullifier-sig/"
categories = ["cryptography", "cryptography::cryptocurrencies"]
keywords = ["nullifier", "zero-knowledge", "ECDSA", "PLUME"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = "~0.5.0"
ark-ff = "~0.5.0"
ark-std = "~0.5.0"
ark-serialize = "~0.5.0"
ark-serialize-derive = "~0.5.0"
rand_core = { version = "0.6", default-features = false, features = [
    "getrandom",
] }
sha2 = "0.10.2"
zeroize = "*"

# #standinDependencies
## the curve internalization
ark-ff-macros = "~0.5.0"
## field hasher fix
arrayvec = { version = "0.7", default-features = false }

[dev-dependencies]
num-bigint = "*"
num-traits = "*"
hex = "0.4.3"
rand = "0.8.4"