[package]
name = "zk-nullifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zk_nullifier"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
crate = "0.0.2"
digest = "0.10.3"
ring = "0.16.20"
rand_core = "0.6.3"
hex-literal = "0.3.4"
hash2field = "0.4.0"
num-bigint = "0.4.3"
num-integer = "0.1.45"
k256 = {version = "0.11.3", features = ["arithmetic", "hash2curve", "expose-field", "sha2", "serde"]}
elliptic-curve = { version = "0.12.3", features = ["arithmetic", "serde"]}
hex = "0.4.3"

# TODO: Move to 'serde' feature
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }

# TODO: Move those to 'wasm' feature
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.28"