[package]
name = "halo2-plume"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { git = "https://github.com/shreyas-londhe/halo2-lib.git", branch = "feat/secp256k1-hash2curve-poseidon", default-features = false, features = ["halo2-axiom", "test-utils"] }
halo2-ecc = { git = "https://github.com/shreyas-londhe/halo2-lib.git", branch = "feat/secp256k1-hash2curve-poseidon", default-features = false, features = ["halo2-axiom"] }
snark-verifier-sdk = { git = "https://github.com/shreyas-londhe/snark-verifier.git", optional = true}
k256 = { version = "0.13.3", features = ["arithmetic", "hash2curve", "expose-field", "sha2"]}
rand = "0.8.5"
pse-poseidon = { git = "https://github.com/shreyas-londhe/pse-poseidon.git" }

[features]
scripts = ["snark-verifier-sdk"]

[dev-dependencies]
ark-std = "0.4.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
criterion = "0.5.1"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }

[[bin]]
name = "generate-build-files"
path = "./scripts/generate_build_files.rs"
required-features = ["scripts"]

[[bench]]
name = "plume_verify"
harness = false

