[package]
name = "plume-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
halo2-plume = { path = "../../halo2" }
halo2-wasm = { git = "https://github.com/shreyas-londhe/halo2-browser.git", branch = "feat/wasm-instance", default-features = false }
wasm-bindgen = "0.2.87"
serde = {version = "1.0.197" ,features = ["derive"] }
tsify = "0.4.5"
num-bigint = "0.4.4"
num-traits = "0.2.19"
rand = "0.8.5"

[features]
default=["rayon"]
rayon=["halo2-wasm/rayon"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
